--- a/app/src/components/Features/FeatureStyle.scss
+++ b/app/src/components/Features/FeatureStyle.scss
@@ -22,11 +22,47 @@
     @extend .col-md-12;
   }
 
+  .feature-rules {
+    @extend .col-md-12;
+  }
+
   .feature {
     @extend .col-md-12;
     border-bottom: 1px solid #ccc;
     margin-bottom: 10px;
     padding: 10px;
+
+    h1 {
+      font-size: 28px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 6px;
+      color: $dark-green;
+      margin-top: 10px;
+    }
+    h2 {
+      font-size: 22px;
+      font-variant: small-caps;
+      color: $other-blue;
+    }
+    h3 {
+      font-size: 19px;
+      margin-top: 5px;
+      font-weight: lighter;
+    }
+    h4 {
+      font-size: 18px;
+      font-weight: lighter;
+    }
+
+    .feature-collapse {
+      display: block;
+      cursor: pointer;
+      font-size: 12px;
+      color: $other-blue;
+      float: right;
+      padding: 15px 5px;
+      margin-top: 10px;
+    }
   }
 
   .json-obj {
@@ -85,23 +121,55 @@
     }
   }
 
-  .feature-rule {
-    @extend .col-md-12;
+  .feature-rules {
 
-    .feature-rule-item {
+    .feature-rule {
       @extend .col-md-12;
-      margin-left: 10px;
-      margin-bottom: 10px;
 
-      h3 {
-        margin-top: 5px;
+      .feature-rule-item {
+        @extend .col-md-12;
+        margin-left: 10px;
+        margin-bottom: 10px;
+
+        h3 {
+          margin-top: 5px;
+        }
+      }
+      .feature-rule-footer {
+        @extend .col-md-12;
+      }
+      .feature-rule-component {
+        @extend .col-md-12;
       }
     }
-    .feature-rule-footer {
-      @extend .col-md-12;
-    }
-    .feature-rule-component {
-      @extend .col-md-12;
+
+    .rule-object-adder {
+      min-height: 30px;
+
+      .adder-trigger {
+        @extend .btn-primary;
+        margin: 3px;
+        vertical-align: middle;
+      }
+
+      .adder-control {
+        .separator-h {
+          display: inline-block;
+          margin: 0 5px;
+        }
+        .adder-attr-config {
+          display: inline-block;
+        }
+        .form-group {
+          margin: 0 2px;
+          height: 30px;
+          display: inline-block;
+          width: 100px;
+        }
+        button {
+          margin: 0 2px;
+        }
+      }
     }
   }
 
