--- a/app/src/components/JsonObject/JsonObjectStyle.scss
+++ b/app/src/components/JsonObject/JsonObjectStyle.scss
@@ -1,21 +1,5 @@
 .json-object-container {
   @extend .row;
-  $yellow-green: #b0eb00;
-  $red: #b30015;
-  $blue: #2a00b3;
-  $other-blue: #0077b3;
-  $cyan: #00b0b3;
-  $transparent-cyan: #24fbff;
-  $periwinkle: #8a7dff;
-  $light-gray: #a6a6a6;
-  $gray: #595959;
-  $darkish-gray: #444;
-  $dark-gray: #363636;
-  $darker-gray: #303030;
-  $darkest-gray: #292929;
-  $darkester-gray: #111;
-  $bluish: #f3f6fa;
-  $dark-green: #83900B;
 
   background-color: $bluish;
   background-image: linear-gradient(rgba(255, 255, 255, 1) 50%, transparent 50%, transparent);
@@ -123,13 +107,15 @@
     }
 
     .json-object-adder {
+      min-height: 30px;
+      margin-left: 10px;
+
       .adder-trigger {
         margin: 3px;
         vertical-align: middle;
       }
-      .adder-control {
-        margin-left: 20px;
 
+      .adder-control {
         .separator-h {
           display: inline-block;
           margin: 0 5px;
