--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,3 +1,21 @@
+$yellow-green: #b0eb00;
+$red: #b30015;
+$blue: #2a00b3;
+$other-blue: #286090;
+$cyan: #00b0b3;
+$transparent-cyan: #24fbff;
+$periwinkle: #8a7dff;
+$light-gray: #a6a6a6;
+$gray: #595959;
+$darkish-gray: #444;
+$dark-gray: #363636;
+$darker-gray: #303030;
+$darkest-gray: #292929;
+$darkester-gray: #111;
+$bluish: #f3f6fa;
+$dark-green: #83900B;
+
 .app-container {
   @extend .container-fluid;
+  padding: 0px;
 }
