--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -14,6 +14,7 @@ $darkest-gray: #292929;
 $darkester-gray: #111;
 $bluish: #f3f6fa;
 $dark-green: #83900B;
+$dark-purple: #904AA5;
 
 .app-container {
   @extend .container-fluid;
