--- a/app/src/components/JsonObject/JsonObjectStyle.scss
+++ b/app/src/components/JsonObject/JsonObjectStyle.scss
@@ -30,7 +30,7 @@
             span {
               cursor: pointer;
               display: inline-block;
-              color: $other-blue;
+              color: $dark-purple;
             }
           }
         }
@@ -69,7 +69,7 @@
                 border: none;
                 background: none;
                 box-shadow: none;
-                color: $dark-green;
+                color: $dark-purple;
               }
             }
           }
