--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -7,11 +7,12 @@ $transparent-cyan: #24fbff;
 $periwinkle: #8a7dff;
 $light-gray: #a6a6a6;
 $gray: #595959;
-$darkish-gray: #444;
+$darkish-gray: #969896;
 $dark-gray: #363636;
 $darker-gray: #303030;
 $darkest-gray: #292929;
 $darkester-gray: #111;
+$blackly: #1d1f21;
 $bluish: #f3f6fa;
 $dark-green: #83900B;
 $dark-purple: #904AA5;
