--- a/app/src/components/Features/FeatureStyle.scss
+++ b/app/src/components/Features/FeatureStyle.scss
@@ -1,19 +1,4 @@
 .FeatureItem {
-  .feature-service-header {
-    @extend .row-fluid;
-    display: block;
-    background: #eee;
-
-    .title {
-      @extend .col-md-12;
-
-      h1 {
-        display: inline-block;
-        font-variant: small-caps;
-      }
-    }
-  }
-
   .feature-container {
     @extend .row-fluid;
   }
@@ -51,6 +36,26 @@
     h4 {
       font-size: 18px;
       font-weight: lighter;
+    }
+
+    .feature-header {
+      @extend .col-md-12;
+      border-bottom: 1px solid #ccc;
+      padding: 5px;
+      padding-right: 10px;
+
+      h1 {
+        border-bottom: none;
+        padding-bottom: 5px;
+        margin-bottom: 0px;
+      }
+      h2 {
+        &.subtitle {
+          font-size: 15px;
+          padding-bottom: 5px;
+          margin: 0px;
+        }
+      }
     }
 
     .feature-collapse {
@@ -220,5 +225,57 @@
 
   .feature-footer {
     @extend .col-md-12;
+  }
+}
+
+.feature-list {
+  .feature-service-header {
+    @extend .row-fluid;
+    display: block;
+    background: #eee;
+
+    .title {
+      @extend .col-md-12;
+
+      h1 {
+        display: inline-block;
+        font-variant: small-caps;
+        font-size: 25px;
+      }
+    }
+  }
+
+  .feature-adder {
+    @extend .col-md-12;
+
+    min-height: 30px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 30px;
+
+    .adder-trigger {
+      @extend .btn-primary;
+      margin: 3px;
+      vertical-align: middle;
+    }
+
+    .adder-control {
+      .separator-h {
+        display: inline-block;
+        margin: 0 5px;
+      }
+      .adder-attr-config {
+        display: inline-block;
+      }
+      .form-group {
+        margin: 0 2px;
+        height: 30px;
+        display: inline-block;
+        width: 100px;
+      }
+      button {
+        margin: 0 2px;
+      }
+    }
   }
 }
